<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alice"
        android:padding="6dp"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        tools:text="@tools:sample/first_names[4]" />

    <ImageView
        android:id="@+id/imageViewBanner"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/banner"
        android:padding="6dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alice"
        android:padding="6dp"
        android:text="@string/textt" />

    <ImageView
        android:id="@+id/LeadPhoto"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/leadphoto"
        android:padding="6dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/LeadName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alice"
        android:padding="3dp"
        android:textColor="#000000"
        tools:text="@tools:sample/full_names[2]" />

    <LinearLayout
        android:id="@+id/Links"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ButtonTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/twitterlink"
            android:focusable="true"
            app:srcCompat="@drawable/ic_008_twitter" />

        <ImageButton
            android:id="@+id/ButtonYoutube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/youtubelink"
            android:focusable="true"
            app:srcCompat="@drawable/ic_001_youtube" />

        <ImageButton
            android:id="@+id/ButtonInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/instagramlink"
            android:focusable="true"
            app:srcCompat="@drawable/ic_029_instagram" />

        <ImageButton
            android:id="@+id/ButtonParticipation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/participationlink"
            android:focusable="true"
            app:srcCompat="@drawable/ic_attachment_clip" />
    </LinearLayout>

</LinearLayout>
